# freshrss-filter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: docker-build.yml
src/: config.rs  db.rs  freshrss.rs  greader.rs  main.rs  openai_client.rs  processor.rs  scheduler.rs  tui_app.rs
