[package]
name = "freshrss-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }
tokio-cron-scheduler = "0.10"

# HTTP客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# TUI界面
ratatui = "0.28"
crossterm = "0.28"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
futures = "0.3"

# 配置和环境变量
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# 异步信号
tokio-signal = "0.2"

# 正则表达式
regex = "1.11"

# URL 编码
urlencoding = "2.1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Hash
md5 = "0.7"
