[package]
name = "freshrss-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-cron-scheduler = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] ,default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
md5 = "0.7"
config = "0.15.18"
colored = "2.1"
